======================= Release 1.0 *** =======================

Improvements

* [GH-10] Make the class attributes definitions configurable
* [GH-12] Improve pagination
* [GH-13] Split the AnalyticsVocab class into one class per vocabulary
* [GH-33] Add sesame query parser as submodule

New Features

* [GH-11] Implement the Single-Class Label Model
* [GH-9] Provide a REST API to SparQLed

Tasks

* [GL-27] Clean the code
* [GH-37] Remove Virtuoso sesame plugin